Fix emoji clipping in sidebar topics
Fixes #38264.

--- a/web/styles/left_sidebar.css
+++ b/web/styles/left_sidebar.css
@@ -1827,7 +1827,7 @@ li.active-sub-filter {
         /* Break overflowing words as necessary. */
         overflow-wrap: break-word;
 
-        line-height: var(--line-height-sidebar-topic-inner);
+        line-height: 1.4;
         /* To avoid clipping the tops of certain characters,
            we set the top space with padding. But to make the
            line-clamp effect work, we set the bottom space
